Fix dl alignment regression to sites#index
* Be specific that we expect floated lists in both sites and popups

--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -30,7 +30,7 @@ $padding-dl-and-reason: 1%;
   }
 }
 
-.site {
+.site, .leaflet-popup-content {
   dl {
     padding: $padding-dl-and-reason;
 
